<?xml version="1.0"?>
<package format="2">
    <name>popi_description</name>
    <version>0.0.0</version>
    <description>The popi_description package</description>

    <maintainer email="popi@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
